<resources>
    <string name="app_name">Weather</string>
    <string name="button">Button</string>
    <string name="enter_your_zip_code_and_see_the_forecast_for_the_next_7_days">Enter your Zip Code and see the forecast for the next 7 days</string>
    <string name="welcome_to_weatherapp">Welcome to WeatherApp</string>
    <string name="zip_code">Zip Code</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temp_max">Max temp today</string>
    <string name="temp_min">Min temp today</string>
    <string name="currentWeather">Current Weather</string>
    <string name="mainWeather">Weather</string>
</resources>
