<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:id="@+id/forecastImageView"
        android:scaleType="centerCrop"
        android:contentDescription=""
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="#ffffff"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/timeDateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mainWeather"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mainTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainWeather"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/currentWeatherTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currentWeather"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="470dp">

            <TextView
                android:id="@+id/temp_maxTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/temp_max"
                android:textStyle="italic"
                tools:ignore="ObsoleteLayoutParam" />

            <TextView
                android:id="@+id/temp_minTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/temp_maxTextView"
                android:text="@string/temp_min"
                android:textStyle="italic"
                tools:ignore="ObsoleteLayoutParam" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>