<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.guest.weather.ui.MainActivity">

    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_weatherapp"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="28dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <EditText
        android:id="@+id/locationEditText"
        android:layout_width="130dp"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="number"
        android:text=""
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:ignore="LabelFor"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginTop="19dp"
        app:layout_constraintTop_toBottomOf="@+id/appNameTextView2" />

    <TextView
        android:id="@+id/appNameTextView2"
        android:layout_width="wrap_content"
        android:layout_height="78dp"
        android:text="@string/enter_your_zip_code_and_see_the_forecast_for_the_next_7_days"
        android:textAlignment="center"
        android:textSize="24sp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="3dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/appNameTextView" />

    <Button
        android:id="@+id/showForecastButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/button"
        tools:layout_constraintRight_creator="1"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/locationEditText"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
